--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-plugin-sitemap": "^2.2.3",
     "gatsby-plugin-typography": "^2.3.2",
-    "gatsby-source-prismic": "^2.2.0",
+    "gatsby-source-prismic": "^2.3.0-alpha.3",
     "gatsby-transformer-sharp": "^2.2.4",
+    "gatsby-plugin-disqus": "^1.1.1",
     "lodash": "^4.17.15",
     "prismic-dom": "^2.1.0",
     "prismjs": "^1.17.1",
