--- a/package.json
+++ b/package.json
@@ -25,12 +25,18 @@
     "@emotion/core": "^10.0.14",
     "@emotion/styled": "^10.0.14",
     "@emotion/styled-base": "^10.0.14",
+    "@material-ui/core": "4.1.3",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.1.2",
     "@reach/skip-nav": "^0.1.3",
+    "algoliasearch": "^3.33.0",
     "emotion": "^10.0.14",
     "emotion-server": "^10.0.14",
     "emotion-theming": "^10.0.14",
     "gatsby": "^2.13.41",
     "gatsby-image": "^2.2.7",
+    "gatsby-plugin-algolia": "^0.3.2",
+    "gatsby-plugin-disqus": "^1.1.1",
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-google-analytics": "^2.1.4",
     "gatsby-plugin-lodash": "^3.1.2",
@@ -40,10 +46,10 @@
     "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-plugin-sitemap": "^2.2.3",
+    "gatsby-plugin-styled-components": "^3.1.2",
     "gatsby-plugin-typography": "^2.3.2",
     "gatsby-source-prismic": "^2.3.0-alpha.3",
     "gatsby-transformer-sharp": "^2.2.4",
-    "gatsby-plugin-disqus": "^1.1.1",
     "lodash": "^4.17.15",
     "prismic-dom": "^2.1.0",
     "prismjs": "^1.17.1",
@@ -51,6 +57,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-instantsearch-dom": "^5.7.0",
     "react-typography": "^0.16.19",
     "typeface-lora": "^0.0.72",
     "typeface-source-sans-pro": "^0.0.75",
@@ -72,7 +79,9 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "gatsby-cypress": "^0.2.3",
     "prettier": "^1.18.2",
-    "start-server-and-test": "^1.9.1"
+    "start-server-and-test": "^1.9.1",
+    "styled-components": "^4.3.2",
+    "styled-icons": "^8.1.0"
   },
   "keywords": [
     "gatsby",
