--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
     "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-plugin-sitemap": "^2.2.3",
     "gatsby-plugin-styled-components": "^3.1.2",
+    "gatsby-plugin-transition-link": "^1.12.4",
     "gatsby-plugin-typography": "^2.3.2",
     "gatsby-source-prismic": "^2.3.0-alpha.3",
     "gatsby-transformer-sharp": "^2.2.4",
+    "gsap": "^2.1.3",
     "lodash": "^4.17.15",
     "prismic-dom": "^2.1.0",
     "prismjs": "^1.17.1",
